--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -12,10 +12,12 @@
             <a class="semi-transparent-button with-border nav-links" href="#skills">SKILLS</a>
             <a class="semi-transparent-button with-border nav-links" href="#projects">PROJECTS</a>
             <a class="semi-transparent-button with-border nav-links" href="#awards">AWARDS</a>
-            <a class="semi-transparent-button with-border nav-links" href="#pubs">   PATENTS<span class="line-break">&</span> PUBLICATIONS</a>
-            <a class="semi-transparent-button with-border nav-links" href="#contact">CONTACT<span class="line-break">&</span> RESUME</a>
+            <a class="semi-transparent-button with-border nav-links" href="#pubs"> PATENTS<span
+                    class="line-break">&</span> PUBLICATIONS</a>
+            <a class="semi-transparent-button with-border nav-links" href="#contact">CONTACT<span
+                    class="line-break">&</span> RESUME</a>
 
-         </div>
         </div>
+    </div>
 
 </section>
