--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,24 +1,24 @@
-<!-- <div class="section-wrapper"> -->
+<div class="section-wrapper">
     <section class="section projects" id="projects">
         <div class="full-width">
             <div class="section-heading" id="featured-projects-text">Projects</div>
             <h3 class="center-align skills-subsection">(Click a category)</h3>
 
-            <div class="head-menu-wrap">
+            <div class="project-categories">
 
                 <a id="all" class="semi-transparent-button with-border white-button" onclick="selected('all')">All</a>
                 <a id="motion_planning" class="semi-transparent-button with-border white-button" onclick="selected('motion_planning')">Motion
-                    Planning</a>
+                    <span class="line-break">    Planning</span></a>
                 <a id="vision" class="semi-transparent-button with-border white-button"
                     onclick="selected('vision')">Vision</a>
                 <a id="oss_o" class="semi-transparent-button with-border white-button" onclick="selected('oss_o')">Open
-                    source original</a>
+                    <span class="line-break"> source </span>original</a>
                 <a id="oss_p" class="semi-transparent-button with-border white-button" onclick="selected('oss_p')">Open
-                    source patches and contributions</a>
+                    source<span class="line-break">  patches and </span>contributions</a>
                 <a id="simulation" class="semi-transparent-button with-border white-button"
                     onclick="selected('simulation')">Simulation</a>
                 <a id="m_f_e" class="semi-transparent-button with-border white-button"
-                    onclick="selected('m_f_e')">Mechanical /<span="line-break"> Firmware /</span>  Electrical</a>
+                    onclick="selected('m_f_e')">Mechanical /<span class="line-break"> Firmware /</span>  Electrical</a>
                 <a id="mobile" class="semi-transparent-button with-border white-button"
                     onclick="selected('mobile')">Mobile</a>
                 <a id="docker" class="semi-transparent-button with-border white-button"
@@ -31,4 +31,4 @@
             </div>
         </div>
     </section>
-<!-- </div> -->
+</div>
