--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -40,6 +40,18 @@ img {
   font-weight: bold;
 }
 
+
+.projects-wrapper {
+  display: grid;
+  grid-template-columns: repeat(1, auto); 
+  grid-gap: 10px;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  padding-top: 50px;
+}
+
+
 .animated {
   -webkit-animation: fade-in-down 0.6s;
           animation: fade-in-down 0.6s;
@@ -149,13 +161,7 @@ img {
   text-align: center;
 }
 
-.projects-wrapper {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: 50% 50%;
-      grid-template-columns: 50% 50%;
-  grid-gap: 10px;
-}
+
 
 .full-width {
   width: 100%;
@@ -593,26 +599,6 @@ a {
 }
 
 
-@media (min-width: 600px) {
-  .project-category-button {
-    flex: 1 1 calc(25% - 10px); /* Adjust for 4 buttons per row */
-  }
-}
-
-@media (min-width: 900px) {
-  .project-category-button {
-    flex: 1 1 calc(16.66% - 10px); /* Adjust for 6 buttons per row */
-  }
-}
-
-  .project-category-button:nth-child(odd) {
-    background-color: #ff7f50;
-  }
-  
-  .project-category-button:nth-child(even) {
-    background-color: #87ceeb; 
-  }
-  
 
 
 /* Here follow all the media queries */
@@ -635,16 +621,6 @@ a {
   }
 }
 
-/* @media screen and (max-width: 775px) {
-  .project-categories {
-    -ms-grid-columns: auto auto auto;
-        grid-template-columns: auto auto auto;
-    width: -webkit-fit-content;
-    width: -moz-fit-content;
-    width: fit-content;
-    margin: 20px auto;
-  }
-} */
 @media screen and (min-width: 620px) {
     .head-menu-wrap {
       grid-template-columns: repeat(3, auto); /* Adjust for fewer columns on smaller screens */
@@ -658,9 +634,20 @@ a {
       gap: 10px; /* Keep the gap consistent */
       width: 80%; /* Adjust width as necessary */
       margin-top: 30px;
+      justify-content: center;
 
     }
   
+
+    .projects-wrapper {
+      display: grid;
+      grid-template-columns: repeat(2, auto); 
+      grid-gap: 10px;
+      -webkit-box-pack: center;
+      -ms-flex-pack: center;
+      justify-content: center;
+      padding-top: 50px;
+    }
 
   #nav {
     background-attachment: unset;
@@ -696,16 +683,7 @@ a {
         grid-template-columns: auto;
   }
 
-  .projects-wrapper {
-    display: -ms-grid;
-    display: grid;
-    -ms-grid-columns: auto;
-        grid-template-columns: auto;
-    grid-gap: 10px;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-  }
+
 }
 
 @media screen and (max-height: 450px) and (max-width: 600px) {
