Upsized menu buttons. Left aligned texts

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -2,7 +2,7 @@
     <section class="section about" id="about">
         <div id="about-text">
             <div class="section-heading">About</div>
-            <p class="paragraph-text justify-text">
+            <p class="paragraph-text">
                15 years ago, while I was working as a researcher in quantum information theory, 
                 my little sister asked me to build her a robot dog. I figured: "Why not?".
                 After finishing her mobile robot, I was hooked. Since then,
