--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -6,14 +6,14 @@
       <div class="skills-grid" style="display: flex; flex-wrap: wrap; justify-content: space-around;">
         <div style="flex: 1; min-width: 45%; max-width: 45%;">
           <div class="what-i-do">
-            <h3 class="center-align skills-subsection">Leadership</h3>
-            <p class="paragraph-text center-align">
+            <h4 class="center-align skills-subsection">Leadership</h4>
+            <p class="paragraph-text left-align">
               I love taking ownership of a project from start to finish. I founded ShapeMeasure to automate measuring
               and cutting in construction and grew the company to 15 employees, $500K+ run rate, and thousands of
               delivered sales.
             </p>
-            <h3 class="center-align skills-subsection">Software</h3>
-            <p class="paragraph-text center-align">
+            <h4 class="center-align skills-subsection">Software</h4>
+            <p class="paragraph-text left-align">
               I've developed robotics software in C, C++, Python. Using tools such as ROS, OpenCV, Numpy, git, Eclipse,
               Visual Studio Code, and Docker. I have experience developing in Linux and Windows. Checkout my free and
               open-source software contributions.
@@ -23,13 +23,13 @@
 
         <div style="flex: 1; min-width: 45%; max-width: 45%;">
           <div class="what-i-do">
-            <h3 class="center-align skills-subsection">Research</h3>
-            <p class="paragraph-text center-align">
+            <h4 class="center-align skills-subsection">Research</h4>
+            <p class="paragraph-text left-align">
               I've tackled research-grade problems in quantum information, human-robot interaction, and robot motion
               planning. I've also secured over $650K in research grants. See my publications and patents.
             </p>
-            <h3 class="center-align skills-subsection">Prototyping</h3>
-            <p class="paragraph-text center-align">
+            <h4 class="center-align skills-subsection">Prototyping</h4>
+            <p class="paragraph-text left-align">
               I love getting my hands dirty with electro-mechanical prototyping. I have experience with
               microcontrollers, basic circuit design, sensors, and actuators. I've designed and built ESCs, mobile
               robots, and 3D printed / laser cut widgets for robot manipulators.
@@ -38,7 +38,7 @@
         </div>
 
         <div class="technical-skills" style="flex-basis: 100%; margin-top: 20px;">
-          <h3 class="center-align skills-subsection">Technologies</h3>
+          <h2 class="center-align skills-subsection">Technologies</h2>
 
           <div class="card__meta">
             <span class="project-technology paragraph-text">ROS</span>
