--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -7,7 +7,7 @@
                 <a href="mailto:{{ site.email }}">{{ site.email }}</a> 
             </p>
             <p class="paragraph-text">
-                My resume is available here: <a href="{{ site.blog_url }}/Ben_Blumer_Resume.pdf">PDF</a>.
+                My resume is available as a <a href="{{ site.blog_url }}/Ben_Blumer_Resume.pdf">PDF here</a>.
             </p>
             <div class="extra-links">
                 <span class="hint--bottom bottom-link" aria-label="Email">
